@@ -18,6 +18,7 @@
 	- refactor header subroutines out of -lrpmlib into -lrpmdb.
 	- add RPMTAG_PACKAGECOLOR at install time, retrofit on --rebuilddb.
 	- add Packagecolor index to handle multilib scriptlet instance counts.
+	- convert indices with ordering properties from DB_HASH to DB_BTREE.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
